# ERC_CS_ControlStation

./: .gitignore  .gitmodules  README.md  RF_form.odt  csnode.service  init.sh  launch.sh  main.js  mult_cameras.py  package-lock.json  package.json  roco_diagram.odp  ros_video.py  start_cs.sh  test_video.py  vid_receive.py
RoCo2021/: CMakeLists.txt  IOBus.h  IODriver.h  MessageBus.cpp  MessageBus.h  NetworkBus.cpp  NetworkBus.h  NetworkClientIO.cpp  NetworkClientIO.h  NetworkIO.h  NetworkServerIO.cpp  NetworkServerIO.h  RoCo.h
RoCo2021/CS/: callbacks.py  handlers.h  interface  interface.cpp  listener.cpp  listener.py  make_interface.mk  receive.cpp  roco_tips.txt  send.cpp
RoCo2021/Protocol/: Protocol.h  Protocol20W18.h  Protocol21W3.h  ProtocolRegisters.h
cs_ws/src/avionics_interfaces/: CMakeLists.txt  package.xml
cs_ws/src/avionics_interfaces/msg/: AccelConfigRequestMCU.msg  AngleArray.msg  GyroConfigRequestJetson.msg  Imu.msg  ImuCalib.msg  LEDResponse.msg  LaserRequest.msg  LaserResponse.msg  MagConfigRequestJetson.msg  MassArray.msg  MassCalibOffset.msg  MassCalibScale.msg  MassConfigResponse.msg  NodeStateArray.msg  PotConfigResponse.msg  ServoConfigRequestJetson.msg  ServoConfigRequestMCU.msg  ServoRequest.msg  SpectroRequest.msg  SpectroResponse.msg
cs_ws/src/control_station_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
cs_ws/src/control_station_pkg/control_station_pkg/: camera_subscriber.py  cameras.py  cameras_reciever.py  control_station.py  db.sqlite3  manage.py
cs_ws/src/control_station_pkg/control_station_pkg/Django_app/: admin.py  apps.py  models.py  urls.py  views.py
cs_ws/src/control_station_pkg/control_station_pkg/Django_app/Consumers/: HdConsumer.py
cs_ws/src/control_station_pkg/control_station_pkg/Django_app/front_end/templates/pages/: handlingdevice.html  navigation.html
cs_ws/src/control_station_pkg/control_station_pkg/Gamepad/: Gamepad.py
cs_ws/src/control_station_pkg/control_station_pkg/MVC_node/: action_handlings.py  controller.py  cs_node.py  model.py  network_monitor.py  new_controller.py  new_cs_node.py  systems.py
cs_ws/src/control_station_pkg/control_station_pkg/MVC_node/models/: Tabs.py  __init__.py  elec.py  gamepad.py  handling_device.py  navigation.py  rover.py  science.py  tabs.py  utils.py
cs_ws/src/control_station_pkg/control_station_pkg/MVC_node/models/data/: Database_reference.csv  spectrum.csv
cs_ws/src/control_station_pkg/control_station_pkg/MVC_node/models/data/database3/: 10 BD2 Fsp 1.csv  10 BD2 Fsp1.csv  10 BD2 Fsp2.csv  10 BD3 Fsp.csv  10 BD3.csv  10 BD5 Dark1.csv  10 BD5 Dark2.csv  10 BD5 Dark3.csv  10 BD5 Fsp.csv  10 BD5.csv  10BD2 Dark3.csv  10BD2 Dark4.csv  10BD2.csv  10BD3 Dark3.csv  10BD3 Dark4+.csv  10BD3 Dark4-.csv  10BD3.csv  10BD5.csv  Acfer 182 PL 01267.csv  Alais PL 92322.csv  Allende PL 04250.csv  Andesine.csv  Anorthite 100 syn.csv  Anorthite 50 syn.csv  (+61 more)
cs_ws/src/control_station_pkg/control_station_pkg/MVC_node/systems/: Navigation.py  Science.py
cs_ws/src/control_station_pkg/control_station_pkg/cameras/: urls.py  views.py
cs_ws/src/control_station_pkg/control_station_pkg/csApp/: admin.py  apps.py  models.py  routing.py  urls.py  views.py
cs_ws/src/control_station_pkg/control_station_pkg/csApp/Consumers/: AvConsumer.py  CameraConsumer.py  ElecConsumer.py  GamepadConsumer.py  HDConsumer.py  HdConsumer.py  HdManualConsumer.py  InfoDrillConsumer.py  InfoElecConsumer.py  InfoHDConsumer.py  InfoNavConsumer.py  InfoRoverConsumer.py  InfoScienceConsumer.py  LogConsumer.py  ManConsumer.py  NavAutoConsumer.py  NavConsumer.py  NavManualConsumer.py  NavSemiAutoConsumer.py  RoverConsumer.py  ScienceDataConsumer.py  ScienceDrillConsumer.py  SessionConsumer.py  TimeConsumer.py  TimerConsumer.py
cs_ws/src/control_station_pkg/control_station_pkg/csApp/front_end/templates/: base.html  launcher.html
cs_ws/src/control_station_pkg/control_station_pkg/csApp/frontend/: .prettierrc.json  codux.config.json  package-lock.json  package.json
cs_ws/src/control_station_pkg/control_station_pkg/csApp/frontend/public/: index.html  manifest.json
cs_ws/src/control_station_pkg/control_station_pkg/csApp/frontend/src/: App.tsx  index.tsx  react-app-env.d.ts  serviceWorkerRegistration.ts
cs_ws/src/control_station_pkg/control_station_pkg/csApp/migrations/: migrations.py
cs_ws/src/control_station_pkg/control_station_pkg/csApp/static/handlingdevice/: handlingdevice_socket.js  set_button_task.js
cs_ws/src/control_station_pkg/control_station_pkg/csApp/static/homepage/: homepage_socket.js
cs_ws/src/control_station_pkg/control_station_pkg/csApp/static/launcher/: styles.css
cs_ws/src/control_station_pkg/control_station_pkg/csApp/static/logs/: logs_socket.js  rover_state.js
cs_ws/src/control_station_pkg/control_station_pkg/csApp/static/manualcontrol/: launch_manualcontrol.js  manualcontrol.css  manualcontrol.js  manualcontrol_socket.js
cs_ws/src/control_station_pkg/control_station_pkg/csApp/static/navigation/: Main.css  Rover.js  map_display.js  navigation_socket.js  set_nav_goal.js
cs_ws/src/control_station_pkg/control_station_pkg/csApp/templates/: base.html  launcher.html
cs_ws/src/control_station_pkg/control_station_pkg/csApp/templates/components/: joint_slider_pos.html  rover_status.html
cs_ws/src/control_station_pkg/control_station_pkg/csApp/templates/pages/: handlingdevice.html  homepage.html  logs.html  manualcontrol.html  navigation.html  science.html
cs_ws/src/control_station_pkg/control_station_pkg/djSettings/: asgi.py  settings.py  wsgi.py
cs_ws/src/control_station_pkg/control_station_pkg/django_settings/: asgi.py  settings.py  urls.py  views.py  wsgi.py
cs_ws/src/control_station_pkg/control_station_pkg/static/common/: border.css
cs_ws/src/control_station_pkg/control_station_pkg/static/navigation/: timer.css
cs_ws/src/control_station_pkg/science/: codecomparaisonfinal.py
cs_ws/src/rover_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
cs_ws/src/rover_pkg/rover_pkg/: Globals.py  cam_commands  cameras_publisher.py  gripper_camera.py  launcher.py  model.py  rover.py
(+938 files in other folders)
